# slack-issue-agent

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  NOTICE  README.md  eslint.config.js  package-lock.json
.claude/commands/kiro/: spec-design.md  spec-from-issue.md  spec-tasks.md  steering-custom.md  steering.md
.claude/skills/cleanup-docs/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/script/: install-mise.sh  post-create.sh  setup-git-secrets.sh
.github/issues/: README.md  create-issues.sh
.kiro/steering/: product.md  structure.md  tech.md
agent/: .dockerignore  Dockerfile  LOCAL_TESTING.md  pyproject.toml
agent/scripts/: build-and-push-ecr.sh
agent/src/slack_issue_agent/: __main__.py  agentcore_app.py  slack_client.py
agent/test-payloads/: empty-prompt.json  sample-invocation.json  slack-mention-event.json
agent/tests/: test_agentcore_app.py  test_assume_role.py  test_aws_cli.py  test_aws_connection.py  test_cdk_bootstrap.py  test_cdk_build_lint.py  test_dependencies.py  test_docker_buildx.py  test_git_secrets.py  test_git_secrets_blocking.py  test_integration.py  test_slack_client.py  test_tool_versions.py
cdk/: README.md  package-lock.json  package.json
cdk/lib/: agentcore-stack.ts  lambda-stack.ts  shared-stack.ts
lambda/slack-events-handler/: .gitignore  agentcore_client.py  handler.py  pytest.ini  requirements-dev.txt  requirements.txt  slack_signature.py  ssm_client.py
lambda/slack-events-handler/tests/: __init__.py  test_agentcore_client.py  test_handler.py  test_integration.py  (+1 more)
(+2 files in other folders)
