[project]
name = "slack-issue-agent"
version = "0.1.0"
description = "AI Agent for Slack Canvas automation using AWS Bedrock AgentCore"
requires-python = ">=3.12"
dependencies = [
    "strands-agents==1.15.0",
    "bedrock-agentcore",
    "slack-sdk>=3.0.0",
    "httpx>=0.27.0",
    "strands-agents-tools>=0.2.14",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/slack_issue_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
